--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -1,6 +1,30 @@
 //
 // Grid
 //
+.qazana {
+  &:after {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+
+    @media (min-width: $screen-lg-min) {
+      content: 'desktop';
+    }
+
+    @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+      content: 'tablet';
+    }
+
+    @media (max-width: $screen-sm-max) {
+      content: 'mobile';
+    }
+  }
+}
 
 // Section
 .qazana-section {
@@ -99,10 +123,9 @@
 	display: flex;
 	width: 100%;
 
-	/* In dragging mode it's causing a columns fall */
-	@media (max-width: $screen-sm-max) {
-		flex-wrap: wrap;
-	}
+  @media (max-width: $screen-md-max) {
+    flex-wrap: wrap;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -120,6 +143,7 @@
 
 .qazana-widget-wrap {
 	width: 100%;
+    z-index: $ground-layer-overlay;
 }
 
 // Columns
