--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -214,6 +214,10 @@
     }
 }
 
+a.qazana-edit-template {
+    font-size: 80%;
+}
+
 // Admin Bar - Icon (Front-End)
 #wpadminbar #wp-admin-bar-qazana_edit_page > .ab-item::before {
     content: '\e800';
