--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -144,7 +144,7 @@ a {
 
 body {
   color: #444;
-  font-family: "Noto Sans", Arial, Helvetica, Verdana, sans-serif;
+  font-family: "Noto Sans", Helvetica, Arial, Verdana, sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 1;
@@ -624,7 +624,7 @@ select {
   z-index: 100000; }
 
 .qazana-panel {
-  font-family: "Noto Sans", Arial, Helvetica, Verdana, sans-serif;
+  font-family: "Noto Sans", Helvetica, Arial, Verdana, sans-serif;
   font-size: 13px;
   line-height: 1.5;
   color: #2d2d2d;
@@ -801,13 +801,13 @@ select {
     .qazana-panel .qazana-label.qazana-label-default {
       background-color: #a0a5aa; }
     .qazana-panel .qazana-label.qazana-label-info {
-      background-color: #5bc0de; }
+      background-color: #2296FA; }
     .qazana-panel .qazana-label.qazana-label-success {
-      background-color: #5cb85c; }
+      background-color: #00a33e; }
     .qazana-panel .qazana-label.qazana-label-warning {
-      background-color: #f0ad4e; }
+      background-color: #ffcd3f; }
     .qazana-panel .qazana-label.qazana-label-danger {
-      background-color: #d9534f; }
+      background-color: #f7423d; }
   .qazana-panel .qazana-descriptor, .qazana-panel .qazana-control-field-description {
     font-size: 11px;
     font-style: italic;
