--- a/assets/dev/scss/helpers/variables.scss
+++ b/assets/dev/scss/helpers/variables.scss
@@ -25,25 +25,25 @@ $red: #d9534f;
 $purple: #9C7AC1;
 
 // Info
-$info: #5bc0de;
+$info: #2296FA;
 $info-text: #31708f;
 $info-bg: #d9edf7;
 $info-border: darken($info-bg, 7%);
 
 // Success
-$success: #5cb85c;
+$success: #00a33e;
 $success-text: #3c763d;
 $success-bg: #dff0d8;
 $success-border: darken($success-bg, 7%);
 
 // Warning
-$warning: #f0ad4e;
+$warning: #ffcd3f;
 $warning-text: #8a6d3b;
 $warning-bg: #fcf8e3;
 $warning-border: darken($warning-bg, 7%);
 
 // Danger
-$danger: #d9534f;
+$danger: #f7423d;
 $danger-text: #a94442;
 $danger-bg: #f2dede;
 $danger-border: darken($danger-bg, 7%);
@@ -72,7 +72,7 @@ $editor-info: #008EFF;
 
 $editor-orange: #fcb92c;
 
-$editor-font: 'Noto Sans', Arial, Helvetica, Verdana, sans-serif;
+$editor-font: 'Noto Sans', Helvetica, Arial, Verdana, sans-serif;
 $editor-font-weight: 400;
 
 // Panel style
