--- a/assets/dev/scss/editor/editor.scss
+++ b/assets/dev/scss/editor/editor.scss
@@ -28,3 +28,6 @@
 @import "_templates-modal";
 @import "_global-widgets";
 @import "_widget-templates";
+
+@import "../../../../includes/extensions/history/assets/scss/revisions";
+@import "../../../../includes/extensions/history/assets/scss/history";
