--- a/assets/dev/scss/frontend/widgets/video.scss
+++ b/assets/dev/scss/frontend/widgets/video.scss
@@ -5,19 +5,19 @@
 	&.qazana-aspect-ratio- {
 		&169 {
 			.qazana-video-wrapper {
-				//padding-bottom: 56.25%;
+				padding-bottom: 56.25%;
 			}
 		}
 
 		&43 {
 			.qazana-video-wrapper {
-				//padding-bottom: 75%;
+				padding-bottom: 75%;
 			}
 		}
 
 		&32 {
 			.qazana-video-wrapper {
-				//padding-bottom: 66.6666%;
+				padding-bottom: 66.6666%;
 			}
 		}
 	}
