--- a/assets/dev/scss/editor/editor-preview.scss
+++ b/assets/dev/scss/editor/editor-preview.scss
@@ -5,6 +5,7 @@
 @import '../helpers/mixins';
 @import 'animations';
 @import 'compatibility';
+@import "widgets/spacer";
 
 // Hidden WP Admin Bar
 html.qazana-html {
