--- a/assets/dev/scss/frontend/widgets/social-icons.scss
+++ b/assets/dev/scss/frontend/widgets/social-icons.scss
@@ -29,7 +29,8 @@ $social: (
 'youtube': #c4302b,
 'apple': #555555,
 'houzz': #55a32a,
-'spotify': #1db954
+'spotify': #1db954,
+'amazon': #f49727,
 );
 
 .qazana-social-icons-wrapper {
