--- a/assets/css/editor-rtl.css
+++ b/assets/css/editor-rtl.css
@@ -1076,17 +1076,16 @@ select {
     -webkit-box-sizing: border-box;
             box-sizing: border-box; }
   .qazana-panel .qazana-element {
-    border-radius: 4px;
+    border-radius: 3px;
+    border: 1px solid #dbd2ef;
     background-color: #fff;
     cursor: move;
-    -webkit-box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.12);
-            box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.12);
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     background-clip: padding-box; }
     .qazana-panel .qazana-element:hover {
-      -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-              box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
+      -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.04);
+              box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.04); }
       .qazana-panel .qazana-element:hover .icon,
       .qazana-panel .qazana-element:hover .title {
         color: #9208ff; }
@@ -1096,6 +1095,7 @@ select {
       padding-top: 15px;
       color: #2d2d2d; }
     .qazana-panel .qazana-element i {
+      font-size: 24px;
       line-height: 26px;
       display: inline-block; }
     .qazana-panel .qazana-element .qazana-element-title-wrapper {
@@ -1137,7 +1137,7 @@ select {
   .qazana-panel .panel-elements-category-title-basic {
     display: none; }
   .qazana-panel .panel-elements-category-title {
-    padding: 12px 15px;
+    padding: 25px 15px 4px 15px;
     text-transform: uppercase;
     font-size: 11px; }
   .qazana-panel .panel-elements-category-items {
