--- a/assets/dev/scss/editor/panel/_categories.scss
+++ b/assets/dev/scss/editor/panel/_categories.scss
@@ -15,7 +15,7 @@
 }
 
 .panel-elements-category-title {
-	padding: 12px 15px;
+	padding: 25px 15px 4px 15px;
 	text-transform: uppercase;
 	font-size: 11px;
 }
