--- a/assets/dev/scss/editor/panel/_elements.scss
+++ b/assets/dev/scss/editor/panel/_elements.scss
@@ -27,15 +27,15 @@
 }
 
 .qazana-element {
-	border-radius: 4px;
+	border-radius: 3px;
+	border: 1px solid #dbd2ef;
 	background-color: #fff;
 	cursor: move;
-	box-shadow: 2px 3px 5px 0 rgba(0,0,0,.12);
 	transition: all 0.2s ease-in-out;
 	background-clip: padding-box;
 
 	&:hover {
-		box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+		box-shadow: 0 10px 20px rgba(0,0,0,.05), 0 6px 6px rgba(0,0,0,0.04);
 
 		.icon,
 		.title {
@@ -51,6 +51,7 @@
 	}
 
 	i {
+		font-size: 24px;
 		line-height: 26px;
 		display: inline-block;
 	}
