--- a/assets/dev/scss/frontend/_widgets.scss
+++ b/assets/dev/scss/frontend/_widgets.scss
@@ -24,6 +24,7 @@
 @import "widgets/social-icons";
 @import "widgets/tabs";
 @import "widgets/testimonial";
+@import "widgets/text-editor";
 @import "widgets/toggle";
 @import "widgets/tooltip";
 @import "widgets/video";
