--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -604,7 +604,11 @@ a.qazana-edit-template {
   display: flex;
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
-          flex-wrap: wrap; }
+          flex-wrap: wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .qazana-form-fields-wrapper.qazana-labels-above > .qazana-field-group > .qazana-select-wrapper,
   .qazana-form-fields-wrapper.qazana-labels-above > .qazana-field-group > textarea,
   .qazana-form-fields-wrapper.qazana-labels-above > .qazana-field-group .qazana-field-subgroup,
