--- a/assets/dev/scss/editor/_templates-modal.scss
+++ b/assets/dev/scss/editor/_templates-modal.scss
@@ -242,6 +242,9 @@
 
   .qazana-template-library-template-screenshot {
     height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   .qazana-template-library-template-controls {
