--- a/assets/dev/scss/editor/editor-preview.scss
+++ b/assets/dev/scss/editor/editor-preview.scss
@@ -6,6 +6,7 @@
 @import 'animations';
 @import 'compatibility';
 @import "widgets/spacer";
+@import "inline-editor";
 
 // Hidden WP Admin Bar
 html.qazana-html {
