--- a/assets/css/editor-preview-rtl.css
+++ b/assets/css/editor-preview-rtl.css
@@ -67,8 +67,10 @@ body.qazana-editor-active .qazana-element-overlay .qazana-editor-element-setting
 
 .qazana-spacer {
   background: -webkit-linear-gradient(315deg, rgba(30, 87, 153, 0) 47%, rgba(30, 87, 153, 0) 48%, rgba(141, 210, 255, 0.53) 49%, rgba(141, 210, 255, 0.53) 51%, rgba(30, 87, 153, 0) 52%, rgba(30, 87, 153, 0) 53%);
+  background: -o-linear-gradient(315deg, rgba(30, 87, 153, 0) 47%, rgba(30, 87, 153, 0) 48%, rgba(141, 210, 255, 0.53) 49%, rgba(141, 210, 255, 0.53) 51%, rgba(30, 87, 153, 0) 52%, rgba(30, 87, 153, 0) 53%);
   background: linear-gradient(135deg, rgba(30, 87, 153, 0) 47%, rgba(30, 87, 153, 0) 48%, rgba(141, 210, 255, 0.53) 49%, rgba(141, 210, 255, 0.53) 51%, rgba(30, 87, 153, 0) 52%, rgba(30, 87, 153, 0) 53%);
-  background-size: 6px 6px;
+  -webkit-background-size: 6px 6px;
+          background-size: 6px 6px;
   text-align: center; }
 
 span.qazana-space-resize-value {
@@ -93,6 +95,127 @@ span.qazana-space-resize-value {
   -webkit-align-content: center;
       -ms-flex-line-pack: center;
           align-content: center; }
+
+.pen {
+  position: relative;
+  outline: none; }
+  .pen-menu {
+    -webkit-box-shadow: 1px 2px 3px -2px #222;
+            box-shadow: 1px 2px 3px -2px #222;
+    background-color: #6D7882;
+    position: fixed;
+    border-radius: 3px;
+    z-index: 9998; }
+    .pen-menu:after {
+      top: 100%;
+      content: '';
+      position: absolute;
+      border: 6px solid transparent;
+      border-top-color: #6D7882;
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%); }
+    .pen-menu-below:after {
+      top: 0;
+      -webkit-transform: translateX(-50%) translateY(-100%) rotate(180deg);
+          -ms-transform: translateX(-50%) translateY(-100%) rotate(180deg);
+              transform: translateX(-50%) translateY(-100%) rotate(180deg); }
+  .pen-icon {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 35px;
+    padding: 0 10px;
+    font-size: 21px;
+    color: #D5DADF;
+    cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none; }
+    .pen-icon:hover {
+      background: #556068; }
+    .pen-icon:first-of-type {
+      border-top-left-radius: 3px;
+      border-bottom-left-radius: 3px; }
+    .pen-icon:last-of-type {
+      border-top-right-radius: 3px;
+      border-bottom-right-radius: 3px; }
+    .pen-icon[data-group], .pen-icon[data-action="closeGroup"] {
+      display: none; }
+    .pen-icon[data-action="close"]:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      height: 60%;
+      width: 1px;
+      background-color: #556068; }
+    .pen-icon.active {
+      background-color: #556068;
+      -webkit-box-shadow: inset 2px 2px 4px #556068;
+              box-shadow: inset 2px 2px 4px #556068; }
+  .pen-group-icon:after {
+    font-family: FontAwesome;
+    font-size: 12px;
+    content: '\f0d7';
+    padding-left: 4px;
+    color: #71d7f7; }
+  .pen-input-wrapper {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .pen-input-wrapper .pen-url-input {
+      font-size: 12px;
+      line-height: 1.5;
+      padding: 0;
+      padding-right: 10px;
+      width: 250px; }
+      .pen-input-wrapper .pen-url-input, .pen-input-wrapper .pen-url-input:focus {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        -webkit-box-shadow: none;
+                box-shadow: none;
+        color: #fff; }
+      .pen-input-wrapper .pen-url-input::-webkit-input-placeholder {
+        color: #ddd; }
+      .pen-input-wrapper .pen-url-input::-moz-placeholder {
+        color: #ddd; }
+      .pen-input-wrapper .pen-url-input:-ms-input-placeholder {
+        color: #ddd; }
+      .pen-input-wrapper .pen-url-input::placeholder {
+        color: #ddd; }
+  .pen-input-label {
+    margin: 0; }
+  .pen-placeholder:before {
+    content: attr(data-pen-placeholder);
+    position: absolute;
+    font-weight: normal;
+    color: #757575;
+    opacity: 0.6; }
+  .pen-external-url-checkbox {
+    display: none; }
+    .pen-external-url-checkbox:checked + i {
+      color: #fff; }
+
+.qazana-inline-editing i {
+  font-style: italic; }
+.qazana-inline-editing b {
+  font-weight: bold; }
+.qazana-inline-editing u {
+  text-decoration: underline; }
 
 html.qazana-html {
   margin-top: 0 !important; }
@@ -154,6 +277,7 @@ html.qazana-html {
   content: '';
   background-color: #008EFF;
   -webkit-transition-timing-function: ease-out;
+       -o-transition-timing-function: ease-out;
           transition-timing-function: ease-out;
   opacity: .9;
   height: 10px;
@@ -164,6 +288,7 @@ html.qazana-html {
   content: '';
   background-color: #008EFF;
   -webkit-transition-timing-function: ease-out;
+       -o-transition-timing-function: ease-out;
           transition-timing-function: ease-out;
   opacity: .9;
   height: 10px;
@@ -236,6 +361,7 @@ html.qazana-html {
   color: #ffffff;
   width: 25px;
   -webkit-transition: margin .3s, width .3s, font .3s;
+  -o-transition: margin .3s, width .3s, font .3s;
   transition: margin .3s, width .3s, font .3s;
   -webkit-box-sizing: content-box;
           box-sizing: content-box; }
@@ -244,9 +370,11 @@ html.qazana-html {
   right: 50%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#0072cc), to(#008EFF));
   background-image: -webkit-linear-gradient(top, #0072cc, #008EFF);
+  background-image: -o-linear-gradient(top, #0072cc, #008EFF);
   background-image: linear-gradient(to bottom, #0072cc, #008EFF);
   border-radius: 3px 3px 0 0;
   -webkit-transform: translateX(50%) translateY(-100%);
+      -ms-transform: translateX(50%) translateY(-100%);
           transform: translateX(50%) translateY(-100%); }
   .qazana-editor-active .qazana.qazana-edit-mode .qazana-editor-section-settings .qazana-editor-element-setting:hover {
     background-color: #005599; }
@@ -263,6 +391,7 @@ html.qazana-html {
   border-radius: 0 3px 0 0;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#444), to(#2d2d2d));
   background-image: -webkit-linear-gradient(top, #444, #2d2d2d);
+  background-image: -o-linear-gradient(top, #444, #2d2d2d);
   background-image: linear-gradient(to bottom, #444, #2d2d2d); }
   .qazana-editor-active .qazana.qazana-edit-mode .qazana-editor-column-settings .qazana-editor-element-setting:hover {
     background-color: #23282d; }
@@ -279,6 +408,7 @@ html.qazana-html {
   left: -1px;
   background-image: -webkit-gradient(linear, left bottom, left top, from(#0072cc), to(#008EFF));
   background-image: -webkit-linear-gradient(bottom, #0072cc, #008EFF);
+  background-image: -o-linear-gradient(bottom, #0072cc, #008EFF);
   background-image: linear-gradient(to top, #0072cc, #008EFF);
   border-radius: 0 0 3px 0;
   -webkit-box-orient: horizontal;
@@ -350,6 +480,7 @@ html.qazana-html {
   opacity: .3; }
 .qazana-editor-active .qazana-widget:not(.qazana-loading):not(.qazana-widget-menu-anchor) {
   -webkit-transition: all .1s;
+  -o-transition: all .1s;
   transition: all .1s; }
 .qazana-editor-active .qazana-widget.qazana-widget-can-edit {
   position: relative; }
@@ -421,6 +552,7 @@ html.qazana-html {
   content: '';
   background-color: #008EFF;
   -webkit-transition-timing-function: ease-out;
+       -o-transition-timing-function: ease-out;
           transition-timing-function: ease-out;
   opacity: .9;
   height: 10px;
@@ -542,6 +674,7 @@ html.qazana-html {
   display: none;
   top: 50%;
   -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
           transform: translateY(-50%);
   color: #ffffff;
   font-size: 10px;
