--- a/assets/lib/eicons/css/icons.css
+++ b/assets/lib/eicons/css/icons.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'eicons';
-  src: url("../fonts/eicons.eot?2.2");
-  src: url("../fonts/eicons.eot?2.2#iefix") format("embedded-opentype"), url("../fonts/eicons.woff2?2.2") format("woff2"), url("../fonts/eicons.woff?2.2") format("woff"), url("../fonts/eicons.ttf?2.2") format("truetype"), url("../fonts/eicons.svg?2.2#eicon") format("svg");
+  src: url("../fonts/eicons.eot?2.5.0");
+  src: url("../fonts/eicons.eot?2.5.0#iefix") format("embedded-opentype"), url("../fonts/eicons.woff2?2.5.0") format("woff2"), url("../fonts/eicons.woff?2.5.0") format("woff"), url("../fonts/eicons.ttf?2.5.0") format("truetype"), url("../fonts/eicons.svg?2.5.0#eicon") format("svg");
   font-weight: normal;
   font-style: normal; }
 
-[class^="eicon-"],
+[class^="eicon"],
 [class*=" eicon-"] {
   display: inline-block;
   font-family: eicons;
@@ -27,7 +27,7 @@
 .eicon-plus:before {
   content: '\e803'; }
 
-.eicon-menu:before {
+.eicon-menu-bar:before {
   content: '\e804'; }
 
 .eicon-apps:before {
@@ -147,7 +147,7 @@
 .eicon-navigation-horizontal:before {
   content: '\e843'; }
 
-.eicon-navigation-menu:before {
+.eicon-nav-menu:before {
   content: '\e844'; }
 
 .eicon-navigation-vertical:before {
@@ -440,6 +440,78 @@
 
 .eicon-angle-left:before {
   content: '\e941'; }
+
+.eicon-animated-headline:before {
+  content: '\e942'; }
+
+.eicon-menu-toggle:before {
+  content: '\e943'; }
+
+.eicon-fb-embed:before {
+  content: '\e944'; }
+
+.eicon-fb-feed:before {
+  content: '\e945'; }
+
+.eicon-twitter-embed:before {
+  content: '\e946'; }
+
+.eicon-twitter-feed:before {
+  content: '\e947'; }
+
+.eicon-editor-link:before {
+  content: '\e500'; }
+
+.eicon-editor-unlink:before {
+  content: '\e501'; }
+
+.eicon-editor-external-link:before {
+  content: '\e502'; }
+
+.eicon-editor-close:before {
+  content: '\e503'; }
+
+.eicon-editor-list-ol:before {
+  content: '\e504'; }
+
+.eicon-editor-list-ul:before {
+  content: '\e505'; }
+
+.eicon-editor-bold:before {
+  content: '\e506'; }
+
+.eicon-editor-italic:before {
+  content: '\e507'; }
+
+.eicon-editor-underline:before {
+  content: '\e508'; }
+
+.eicon-editor-paragraph:before {
+  content: '\e509'; }
+
+.eicon-editor-h1:before {
+  content: '\e510'; }
+
+.eicon-editor-h2:before {
+  content: '\e511'; }
+
+.eicon-editor-h3:before {
+  content: '\e512'; }
+
+.eicon-editor-h4:before {
+  content: '\e513'; }
+
+.eicon-editor-h5:before {
+  content: '\e514'; }
+
+.eicon-editor-h6:before {
+  content: '\e515'; }
+
+.eicon-editor-quote:before {
+  content: '\e516'; }
+
+.eicon-editor-code:before {
+  content: '\e517'; }
 
 .eicon-floppy-o:before {
   content: '\e001'; }
